WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
159036
Mail snapshot has black webview in multitasking switcher
https://bugs.webkit.org/show_bug.cgi?id=159036
Summary
Mail snapshot has black webview in multitasking switcher
Tim Horton
Reported
2016-06-22 13:10:00 PDT
Mail snapshot has black webview in multitasking switcher
Attachments
Patch
(13.91 KB, patch)
2016-06-22 13:10 PDT
,
Tim Horton
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Tim Horton
Comment 1
2016-06-22 13:10:14 PDT
Created
attachment 281866
[details]
Patch
Simon Fraser (smfr)
Comment 2
2016-06-22 13:18:06 PDT
Comment on
attachment 281866
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=281866&action=review
> Source/WebKit2/ChangeLog:18 > + UIKit suggested instead waiting for the window context teardown notification, > + which does indeed seem to fire after the snapshotting is complete. I have a small > + change to WebCore::IOSurface and RemoteLayerBackingStore that makes the problem > + much more reproducible, and this fixes it perfectly, while the layers still > + eventually end up being made volatile.
A bit too much story-telling here.
> Source/WebKit2/UIProcess/ApplicationStateTracker.mm:76 > -ApplicationStateTracker::ApplicationStateTracker(UIView *view, SEL didEnterBackgroundSelector, SEL willEnterForegroundSelector) > +ApplicationStateTracker::ApplicationStateTracker(UIView *view, SEL didEnterBackgroundSelector, SEL didFinishSnapshottingAfterEnteringBackgroundSelector, SEL willEnterForegroundSelector)
Why all this selector magic, rather than just an Obj-C protocol or something?
Tim Horton
Comment 3
2016-06-22 13:40:12 PDT
http://trac.webkit.org/changeset/202347
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug