Source/WebKit2/UIProcess/ApplicationStateTracker.mm
@@ -73,25 +73,36 @@ static bool isBackgroundState(BKSApplicationState state)
     }
 }
 
-ApplicationStateTracker::ApplicationStateTracker(UIView *view, SEL didEnterBackgroundSelector, SEL willEnterForegroundSelector)
+ApplicationStateTracker::ApplicationStateTracker(UIView *view, SEL didEnterBackgroundSelector, SEL didFinishSnapshottingAfterEnteringBackgroundSelector, SEL willEnterForegroundSelector)
     : m_view(view)
     , m_didEnterBackgroundSelector(didEnterBackgroundSelector)
+    , m_didFinishSnapshottingAfterEnteringBackgroundSelector(didFinishSnapshottingAfterEnteringBackgroundSelector)
     , m_willEnterForegroundSelector(willEnterForegroundSelector)
     , m_isInBackground(true)
     , m_weakPtrFactory(this)
     , m_didEnterBackgroundObserver(nullptr)
+    , m_didFinishSnapshottingAfterEnteringBackgroundObserver(nullptr)
     , m_willEnterForegroundObserver(nullptr)
 {
     ASSERT([m_view.get() respondsToSelector:m_didEnterBackgroundSelector]);
+    ASSERT([m_view.get() respondsToSelector:m_didFinishSnapshottingAfterEnteringBackgroundSelector]);
     ASSERT([m_view.get() respondsToSelector:m_willEnterForegroundSelector]);
 
     UIWindow *window = [m_view.get() window];
     ASSERT(window);
 
+    NSNotificationCenter *notificationCenter = [NSNotificationCenter defaultCenter];
+    auto weakThis = m_weakPtrFactory.createWeakPtr();
+    m_didFinishSnapshottingAfterEnteringBackgroundObserver = [notificationCenter addObserverForName:@"_UIWindowWillDestroyWindowContextNotification" object:window queue:nil usingBlock:[weakThis](NSNotification *) {
+        auto applicationStateTracker = weakThis.get();
+        if (!applicationStateTracker)
+            return;
+        applicationStateTracker->applicationDidFinishSnapshottingAfterEnteringBackground();
+    }];
+
     switch (applicationType(window)) {
     case ApplicationType::Application: {
         UIApplication *application = [UIApplication sharedApplication];
-        NSNotificationCenter *notificationCenter = [NSNotificationCenter defaultCenter];
 
         m_isInBackground = application.applicationState == UIApplicationStateBackground;
 
@@ -125,7 +136,6 @@ ApplicationStateTracker::ApplicationStateTracker(UIView *view, SEL didEnterBackg
         auto applicationStateMonitor = adoptNS([[BKSApplicationStateMonitor alloc] init]);
         m_isInBackground = isBackgroundState([m_applicationStateMonitor mostElevatedApplicationStateForPID:applicationPID]);
 
-        NSNotificationCenter *notificationCenter = [NSNotificationCenter defaultCenter];
         m_didEnterBackgroundObserver = [notificationCenter addObserverForName:@"_UIViewServiceHostDidEnterBackgroundNotification" object:serviceViewController queue:nil usingBlock:[this](NSNotification *) {
             applicationDidEnterBackground();
         }];
@@ -141,7 +151,6 @@ ApplicationStateTracker::ApplicationStateTracker(UIView *view, SEL didEnterBackg
 
         m_isInBackground = isBackgroundState([m_applicationStateMonitor mostElevatedApplicationStateForPID:getpid()]);
 
-        auto weakThis = m_weakPtrFactory.createWeakPtr();
         [m_applicationStateMonitor setHandler:[weakThis](NSDictionary *userInfo) {
             pid_t pid = [userInfo[BKSApplicationStateProcessIDKey] integerValue];
             if (pid != getpid())
@@ -174,6 +183,7 @@ ApplicationStateTracker::~ApplicationStateTracker()
 
     NSNotificationCenter *notificationCenter = [NSNotificationCenter defaultCenter];
     [notificationCenter removeObserver:m_didEnterBackgroundObserver];
+    [notificationCenter removeObserver:m_didFinishSnapshottingAfterEnteringBackgroundObserver];
     [notificationCenter removeObserver:m_willEnterForegroundObserver];
 }
 
@@ -183,6 +193,12 @@ void ApplicationStateTracker::applicationDidEnterBackground()
 
     if (auto view = m_view.get())
         wtfObjcMsgSend<void>(view.get(), m_didEnterBackgroundSelector);
+}
+
+void ApplicationStateTracker::applicationDidFinishSnapshottingAfterEnteringBackground()
+{
+    if (auto view = m_view.get())
+        wtfObjcMsgSend<void>(view.get(), m_didFinishSnapshottingAfterEnteringBackgroundSelector);
 }
 
 void ApplicationStateTracker::applicationWillEnterForeground()
